--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,23 +12,25 @@
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
                 "## Reading sequencing datas with *Biopython* package\n",
                 "\n",
-                "### Complete genome, chromosome by chromosome, of *Plasmodium falciparum*\n",
+                "### Genome and inversed genome of *Plasmodium falciparum*\n",
                 "\n",
                 "With *Biopython*, each of the 15 *Plasmodium falciparum* chromosomes is stored in a python list under the form of a string. The python list is named **chromosomes**. Mapping operations will be realised on these chromosomes."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [],
             "source": [
                 "from Bio import SeqIO\n",
+                "from tqdm import tqdm\n",
                 "from Chromosome import Chromosome\n",
                 "from dc3 import dc3\n",
                 "import bwt\n",
@@ -38,22 +40,35 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 4,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "Chromosomes importation: 100%|██████████| 30/30 [00:07<00:00,  3.86it/s]\n"
+                    ]
+                }
+            ],
             "source": [
                 "chromosomes:list[Chromosome] = []\n",
                 "chromosomes_inv:list[Chromosome] = []\n",
                 "\n",
-                "for i,record in enumerate(SeqIO.parse(\"SEQUENCES/P_fal_genome.fna\", format=\"fasta\")):\n",
-                "    name = f\"P_fal_chromosome_{i+1}\"\n",
-                "    chromo = Chromosome(name,record.seq,record.id)\n",
-                "    chromosomes.append(chromo)\n",
-                "    #now for inverse\n",
-                "    name_inversed_comp = f\"P_fal_chromosome_-{i+1}\"\n",
-                "    inversed_comp_seq = tools.inverse_sequence(record.seq)\n",
-                "    chromo_inv = Chromosome(name_inversed_comp,inversed_comp_seq,record.id)\n",
-                "    chromosomes_inv.append(chromo_inv)"
+                "with tqdm(total=30, desc=\"Chromosomes importation\") as pbar:\n",
+                "    for i,record in enumerate(SeqIO.parse(\"SEQUENCES/P_fal_genome.fna\", format=\"fasta\")):\n",
+                "        # Normal chromosomes\n",
+                "        name = f\"P_fal_chromosome_{i+1}\"\n",
+                "        chromo = Chromosome(name,record.seq,record.id)\n",
+                "        chromosomes.append(chromo)\n",
+                "        pbar.update(1)\n",
+                "        \n",
+                "        # Inversed chromosomes\n",
+                "        name_inversed_comp = f\"P_fal_chromosome_-{i+1}\"\n",
+                "        inversed_comp_seq = tools.inverse_sequence(record.seq)\n",
+                "        chromo_inv = Chromosome(name_inversed_comp,inversed_comp_seq,record.id)\n",
+                "        chromosomes_inv.append(chromo_inv)\n",
+                "        pbar.update(1)"
             ]
         },
         {
@@ -65,7 +80,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -123,54 +138,10 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### *Reads* acquired from a *P.falciparum* genome sequencing \n",
-                "In the same way, *reads* are extracted with *Biopython* and stored in a  python list **reads**. All the *reads* have the same length: 100 pairs of bases"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 3,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "reads = []\n",
+                "The objectives of this project is to perform a **mapping** of short DNA sequences (1500000 of 100 nucleotides long) over all the chromosomes we just imported. In other words, we need to find their localisation.\n",
                 "\n",
-                "for record in SeqIO.parse(\"SEQUENCES/P_fal_reads.fq\", format=\"fastq\"):\n",
-                "    reads.append((record.seq, record.id))"
+                "Due to the length of the genome and the number of read to map, this problem can't be done with \"naive\" methods. Instead, we use a **string-search** algorithm, based on the Burrows Wheeler Transform (BWT) (Sources: https://www.molgen.mpg.de/3708260/bwt_fm.pdf). The read are mapped over the BWT of all the chromosomes. To that extend, we need to compute the BWT of very large strings which can be very time consuming. The **DC3 algorithm** allows us to compute very efficiently suffix array of strings and the we use it to compute the BWT."
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 4,
-            "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Number of reads: 1500000\n",
-                        "Reads length: 100\n"
-                    ]
-                }
-            ],
-            "source": [
-                "print(f\"Number of reads: {len(reads)}\")\n",
-                "print(f\"Reads length: {len(reads[0][0])}\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "As we can see, the high-throughput sequencing generated 1.5 million *reads*, each 100 nucleotides in size. To sharpen the mapping, the reads will be divided into even smaller fragments, called **kmer**. "
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
         },
         {
             "cell_type": "markdown",
@@ -187,18 +158,28 @@
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "The following lines of code are used to import the suffix table computed from the DC3 algorithm\n",
+                "\n",
                 "To store all DC3 result, the following comands.\n",
                 "Stored in .npy, one of the best way of storage for list (https://stackoverflow.com/questions/9619199/best-way-to-preserve-numpy-arrays-on-disk)"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "100%|██████████| 30/30 [00:00<00:00, 140906.07it/s]"
+                    ]
+                },
                 {
                     "name": "stdout",
                     "output_type": "stream",
@@ -234,6 +215,13 @@
                         "P_fal_chromosome_-14\n",
                         "P_fal_chromosome_-15\n"
                     ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "\n"
+                    ]
                 }
             ],
             "source": [
@@ -249,8 +237,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "This chunk create all Suffix table if it's the first time you generated the dc3 result.\n",
-                "All suffixe table has been created to compute BWT on all sequences"
+                "This chunk creates (or imports) the BWT transform of every chromosomes"
             ]
         },
         {
@@ -299,9 +286,18 @@
                 "for chromo in chromosomes+chromosomes_inv:\n",
                 "    print(chromo.file_name)\n",
                 "    if chromo.bwt is None:\n",
-                "        bwt_result = bwt.bwt(str(chromo.DNA_dol),chromo.suffix_table) #TODO: avoid str() use\n",
+                "        bwt_result = bwt.bwt(str(chromo.DNA_dol),chromo.suffix_table)\n",
                 "        bwt_result = bwt_result.replace(\"$\", \"\")\n",
-                "        chromo.export_bwt_result(bwt_result) #TODO 2: verify result\n"
+                "        chromo.export_bwt_result(bwt_result)\n"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Next we compute or import the rank matrix of each chromosome. Rank matrices are large python dictionnaries storing for a chromosome, the rank array of each of its four nucleotides \"A\", \"C\", \"G\", \"T\" and for the end of string character \"$\".<p>\n",
+                "Rank matrices are very useful for our *string_search* function in the mapping module. They allow us to localise substrings with $O(1)$ complexity (again the source: https://www.molgen.mpg.de/3708260/bwt_fm.pdf)."
             ]
         },
         {
@@ -466,14 +462,58 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 1,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Unexpected exception formatting exception. Falling back to standard exception\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "Traceback (most recent call last):\n",
+                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3378, in run_code\n",
+                        "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+                        "  File \"/tmp/ipykernel_4518/370004424.py\", line 2, in <module>\n",
+                        "    with tqdm(total=1500000, desc=\"Reads importation\") as pbar:\n",
+                        "NameError: name 'tqdm' is not defined\n",
+                        "\n",
+                        "During handling of the above exception, another exception occurred:\n",
+                        "\n",
+                        "Traceback (most recent call last):\n",
+                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 1997, in showtraceback\n",
+                        "    stb = self.InteractiveTB.structured_traceback(\n",
+                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1112, in structured_traceback\n",
+                        "    return FormattedTB.structured_traceback(\n",
+                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1006, in structured_traceback\n",
+                        "    return VerboseTB.structured_traceback(\n",
+                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 859, in structured_traceback\n",
+                        "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 793, in format_exception_as_a_whole\n",
+                        "    self.get_records(etb, number_of_lines_of_context, tb_offset) if etb else []\n",
+                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 839, in get_records\n",
+                        "    style = stack_data.style_with_executing_node(style, \"bg:ansiyellow\")\n",
+                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/stack_data/core.py\", line 455, in style_with_executing_node\n",
+                        "    class NewStyle(style):\n",
+                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/pygments/style.py\", line 91, in __new__\n",
+                        "    ndef[4] = colorformat(styledef[3:])\n",
+                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/pygments/style.py\", line 58, in colorformat\n",
+                        "    assert False, \"wrong color format %r\" % text\n",
+                        "AssertionError: wrong color format 'ansiyellow'\n"
+                    ]
+                }
+            ],
             "source": [
                 "reads = []\n",
-                "\n",
-                "for record in SeqIO.parse(\"SEQUENCES/P_fal_reads.fq\", format=\"fastq\"):\n",
-                "    reads.append((record.seq, record.id))"
+                "with tqdm(total=1500000, desc=\"Reads importation\") as pbar:\n",
+                "    for record in tqdm(SeqIO.parse(\"SEQUENCES/P_fal_reads.fq\", format=\"fastq\")):\n",
+                "        reads.append((record.seq, record.id))\n",
+                "        pbar.update(1)"
             ]
         },
         {
@@ -580,12 +620,12 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.3"
+            "version": "3.10.6"
         },
         "orig_nbformat": 4,
         "vscode": {
             "interpreter": {
-                "hash": "9c6950969c84b67edea1a7d8f4ef0483805b2f2e9e6113a3880292c4ff65adf5"
+                "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
             }
         }
     },
