--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,20 +12,8 @@
             ]
         },
         {
-            "attachments": {},
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Reading sequencing datas with *Biopython* package\n",
-                "\n",
-                "### Genome and inversed genome of *Plasmodium falciparum*\n",
-                "\n",
-                "With *Biopython*, each of the 15 *Plasmodium falciparum* chromosomes is stored in a python list under the form of a string. The python list is named **chromosomes**. Mapping operations will be realised on these chromosomes."
-            ]
-        },
-        {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -36,6 +24,17 @@
                 "import bwt\n",
                 "import tools\n",
                 "import mapping"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Genome importation of *Plasmodium falciparum*\n",
+                "\n",
+                "With *Biopython*, each of the 15 *Plasmodium falciparum* chromosomes is stored in a python list under the form of a string. <p>\n",
+                "In the same time, chromosomes are inversed and stored in chromosomes_inv. The python list is named **chromosomes**. Mapping operations will be realised on chromosomes and their inversed form."
             ]
         },
         {
@@ -80,7 +79,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [
                 {
@@ -104,21 +103,23 @@
                         "Length of the chromosome 13 : 2925237 pairs of bases\n",
                         "Length of the chromosome 14 : 3291937 pairs of bases\n",
                         "Length of the chromosome 15 : 34251   pairs of bases\n",
-                        "Length of the chromosome - 1 : 640852  pairs of bases\n",
-                        "Length of the chromosome - 2 : 947103  pairs of bases\n",
-                        "Length of the chromosome - 3 : 1067972 pairs of bases\n",
-                        "Length of the chromosome - 4 : 1200491 pairs of bases\n",
-                        "Length of the chromosome - 5 : 1343558 pairs of bases\n",
-                        "Length of the chromosome - 6 : 1418243 pairs of bases\n",
-                        "Length of the chromosome - 7 : 1445208 pairs of bases\n",
-                        "Length of the chromosome - 8 : 1472806 pairs of bases\n",
-                        "Length of the chromosome - 9 : 1541736 pairs of bases\n",
-                        "Length of the chromosome -10 : 1687657 pairs of bases\n",
-                        "Length of the chromosome -11 : 2038341 pairs of bases\n",
-                        "Length of the chromosome -12 : 2271495 pairs of bases\n",
-                        "Length of the chromosome -13 : 2925237 pairs of bases\n",
-                        "Length of the chromosome -14 : 3291937 pairs of bases\n",
-                        "Length of the chromosome -15 : 34251   pairs of bases\n"
+                        "\n",
+                        "Inversed chromosomes length, from -1 to -15:\n",
+                        "Length of the chromosome -1 : 640852  pairs of bases\n",
+                        "Length of the chromosome -2 : 947103  pairs of bases\n",
+                        "Length of the chromosome -3 : 1067972 pairs of bases\n",
+                        "Length of the chromosome -4 : 1200491 pairs of bases\n",
+                        "Length of the chromosome -5 : 1343558 pairs of bases\n",
+                        "Length of the chromosome -6 : 1418243 pairs of bases\n",
+                        "Length of the chromosome -7 : 1445208 pairs of bases\n",
+                        "Length of the chromosome -8 : 1472806 pairs of bases\n",
+                        "Length of the chromosome -9 : 1541736 pairs of bases\n",
+                        "Length of the chromosome -10: 1687657 pairs of bases\n",
+                        "Length of the chromosome -11: 2038341 pairs of bases\n",
+                        "Length of the chromosome -12: 2271495 pairs of bases\n",
+                        "Length of the chromosome -13: 2925237 pairs of bases\n",
+                        "Length of the chromosome -14: 3291937 pairs of bases\n",
+                        "Length of the chromosome -15: 34251   pairs of bases\n"
                     ]
                 }
             ],
@@ -128,9 +129,10 @@
                 "for i, chromo in enumerate(chromosomes):\n",
                 "    i += 1\n",
                 "    print(f\"Length of the chromosome {i:>2} : {len(chromo.DNA_dol):<7} pairs of bases\")\n",
+                "print(\"\\nInversed chromosomes length, from -1 to -15:\")\n",
                 "for i, chromo in enumerate(chromosomes_inv):\n",
                 "    i += 1\n",
-                "    print(f\"Length of the chromosome -{i:>2} : {len(chromo.DNA_dol):<7} pairs of bases\")"
+                "    print(f\"Length of the chromosome -{i:<2}: {len(chromo.DNA_dol):<7} pairs of bases\")"
             ]
         },
         {
@@ -151,10 +153,11 @@
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# DC3 on genome"
+                "## DC3 exportation"
             ]
         },
         {
@@ -170,16 +173,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "100%|██████████| 30/30 [00:00<00:00, 140906.07it/s]"
-                    ]
-                },
                 {
                     "name": "stdout",
                     "output_type": "stream",
@@ -215,13 +211,6 @@
                         "P_fal_chromosome_-14\n",
                         "P_fal_chromosome_-15\n"
                     ]
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "\n"
-                    ]
                 }
             ],
             "source": [
@@ -230,6 +219,14 @@
                 "    if chromo.suffix_table is None:\n",
                 "        dc3result = dc3(chromo.DNA_dol)\n",
                 "        chromo.export_dc3_result(dc3result)"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## BWT exportation"
             ]
         },
         {
@@ -289,6 +286,14 @@
                 "        bwt_result = bwt.bwt(str(chromo.DNA_dol),chromo.suffix_table)\n",
                 "        bwt_result = bwt_result.replace(\"$\", \"\")\n",
                 "        chromo.export_bwt_result(bwt_result)\n"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Rank matrices exportation"
             ]
         },
         {
@@ -448,77 +453,36 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Now we calcule all read"
-            ]
-        },
-        {
-            "attachments": {},
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### *Reads* acquired from a *P.falciparum* genome sequencing \n",
-                "In the same way, *reads* are extracted with *Biopython* and stored in a  python list **reads**. All the *reads* have the same length: 100 pairs of bases"
+                "## *Reads* importation from a *P.falciparum* genome sequencing \n",
+                "*Reads* are extracted with *Biopython* and stored in a python list **reads**.\n",
+                "For each of the 15 chromosomes, the sequencing produced 100000 reads.\n",
+                "All the *reads* have the same length: 100 pairs of bases."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Unexpected exception formatting exception. Falling back to standard exception\n"
-                    ]
-                },
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "Traceback (most recent call last):\n",
-                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3378, in run_code\n",
-                        "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-                        "  File \"/tmp/ipykernel_4518/370004424.py\", line 2, in <module>\n",
-                        "    with tqdm(total=1500000, desc=\"Reads importation\") as pbar:\n",
-                        "NameError: name 'tqdm' is not defined\n",
-                        "\n",
-                        "During handling of the above exception, another exception occurred:\n",
-                        "\n",
-                        "Traceback (most recent call last):\n",
-                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 1997, in showtraceback\n",
-                        "    stb = self.InteractiveTB.structured_traceback(\n",
-                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1112, in structured_traceback\n",
-                        "    return FormattedTB.structured_traceback(\n",
-                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1006, in structured_traceback\n",
-                        "    return VerboseTB.structured_traceback(\n",
-                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 859, in structured_traceback\n",
-                        "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 793, in format_exception_as_a_whole\n",
-                        "    self.get_records(etb, number_of_lines_of_context, tb_offset) if etb else []\n",
-                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 839, in get_records\n",
-                        "    style = stack_data.style_with_executing_node(style, \"bg:ansiyellow\")\n",
-                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/stack_data/core.py\", line 455, in style_with_executing_node\n",
-                        "    class NewStyle(style):\n",
-                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/pygments/style.py\", line 91, in __new__\n",
-                        "    ndef[4] = colorformat(styledef[3:])\n",
-                        "  File \"/home/fallog/.local/lib/python3.10/site-packages/pygments/style.py\", line 58, in colorformat\n",
-                        "    assert False, \"wrong color format %r\" % text\n",
-                        "AssertionError: wrong color format 'ansiyellow'\n"
+                        "Reads importation: 100%|██████████| 1500000/1500000 [00:17<00:00, 86605.99it/s] \n"
                     ]
                 }
             ],
             "source": [
                 "reads = []\n",
                 "with tqdm(total=1500000, desc=\"Reads importation\") as pbar:\n",
-                "    for record in tqdm(SeqIO.parse(\"SEQUENCES/P_fal_reads.fq\", format=\"fastq\")):\n",
+                "    for record in SeqIO.parse(\"SEQUENCES/P_fal_reads.fq\", format=\"fastq\"):\n",
                 "        reads.append((record.seq, record.id))\n",
                 "        pbar.update(1)"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 16,
             "metadata": {},
             "outputs": [
                 {
@@ -532,7 +496,7 @@
             ],
             "source": [
                 "print(f\"Number of reads: {len(reads)}\")\n",
-                "print(f\"Reads length: {len(reads[0][0])}\")"
+                "print(f\"Reads length: {len(reads[0][0])} pairs of bases\")"
             ]
         },
         {
