[UPDATE] notebook mapping algo

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -566,6 +566,30 @@
                 "import cProfile\n",
                 "cProfile.run(\"test()\")"
             ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Mapping algorithm\n",
+                "To find the location(s) of a given read on a genome, we start with the cutting of a read into smaller pieces, called **kmers**.\n",
+                "Then we find all the locations of these kmers and we \"reconstruct\" the read to find it's most precise localisation. <p>\n",
+                "The length of the kmers is set to 25 which seems to be a good trade-off between precision and mapping speed."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "for i, read in enumerate(reads):\n",
+                "    read_seq = read[0]\n",
+                "    read_id = read[1]\n",
+                "    kmers = mapping.cut_read_to_kmer(read_seq, 10)\n",
+                "    "
+            ]
         }
     ],
     "metadata": {
@@ -584,7 +608,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.6"
+            "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
         },
         "orig_nbformat": 4,
         "vscode": {
