--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,6 +12,18 @@
             ]
         },
         {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Reading sequencing datas with *Biopython* package\n",
+                "\n",
+                "### Genome and inversed genome of *Plasmodium falciparum*\n",
+                "\n",
+                "With *Biopython*, each of the 15 *Plasmodium falciparum* chromosomes is stored in a python list under the form of a string. The python list is named **chromosomes**. Mapping operations will be realised on these chromosomes."
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": 1,
             "metadata": {},
@@ -24,17 +36,6 @@
                 "import bwt\n",
                 "import tools\n",
                 "import mapping"
-            ]
-        },
-        {
-            "attachments": {},
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Genome importation of *Plasmodium falciparum*\n",
-                "\n",
-                "With *Biopython*, each of the 15 *Plasmodium falciparum* chromosomes is stored in a python list under the form of a string. <p>\n",
-                "In the same time, chromosomes are inversed and stored in chromosomes_inv. The python list is named **chromosomes**. Mapping operations will be realised on chromosomes and their inversed form."
             ]
         },
         {
@@ -88,10 +89,9 @@
                 "for i, chromo in enumerate(chromosomes):\n",
                 "    i += 1\n",
                 "    print(f\"Length of the chromosome {i:>2} : {len(chromo.DNA_dol):<7} pairs of bases\")\n",
-                "print(\"\\nInversed chromosomes length, from -1 to -15:\")\n",
                 "for i, chromo in enumerate(chromosomes_inv):\n",
                 "    i += 1\n",
-                "    print(f\"Length of the chromosome -{i:<2}: {len(chromo.DNA_dol):<7} pairs of bases\")"
+                "    print(f\"Length of the chromosome -{i:>2} : {len(chromo.DNA_dol):<7} pairs of bases\")"
             ]
         },
         {
@@ -112,11 +112,10 @@
             ]
         },
         {
-            "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## DC3 exportation"
+                "# DC3 on genome"
             ]
         },
         {
@@ -185,14 +184,6 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## BWT exportation"
-            ]
-        },
-        {
-            "attachments": {},
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
                 "This chunk creates (or imports) the BWT transform of every chromosomes"
             ]
         },
@@ -208,14 +199,6 @@
                 "        bwt_result = bwt.bwt(str(chromo.DNA_dol),chromo.suffix_table)\n",
                 "        bwt_result = bwt_result.replace(\"$\", \"\")\n",
                 "        chromo.export_bwt_result(bwt_result)\n"
-            ]
-        },
-        {
-            "attachments": {},
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Rank matrices exportation"
             ]
         },
         {
@@ -262,10 +245,16 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## *Reads* importation from a *P.falciparum* genome sequencing \n",
-                "*Reads* are extracted with *Biopython* and stored in a python list **reads**.\n",
-                "For each of the 15 chromosomes, the sequencing produced 100000 reads.\n",
-                "All the *reads* have the same length: 100 pairs of bases."
+                "## Now we calcule all read"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### *Reads* acquired from a *P.falciparum* genome sequencing \n",
+                "In the same way, *reads* are extracted with *Biopython* and stored in a  python list **reads**. All the *reads* have the same length: 100 pairs of bases"
             ]
         },
         {
@@ -285,7 +274,7 @@
             "source": [
                 "reads = []\n",
                 "with tqdm(total=1500000, desc=\"Reads importation\") as pbar:\n",
-                "    for record in SeqIO.parse(\"SEQUENCES/P_fal_reads.fq\", format=\"fastq\"):\n",
+                "    for record in tqdm(SeqIO.parse(\"SEQUENCES/P_fal_reads.fq\", format=\"fastq\")):\n",
                 "        reads.append((record.seq, record.id))\n",
                 "        pbar.update(1)"
             ]
@@ -297,7 +286,7 @@
             "outputs": [],
             "source": [
                 "print(f\"Number of reads: {len(reads)}\")\n",
-                "print(f\"Reads length: {len(reads[0][0])} pairs of bases\")"
+                "print(f\"Reads length: {len(reads[0][0])}\")"
             ]
         },
         {
