[UPDATE] Cleaning & notebooking

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -113,21 +113,13 @@
             ]
         },
         {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# DC3 on genome"
-            ]
-        },
-        {
             "attachments": {},
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "The following lines of code are used to import the suffix table computed from the DC3 algorithm\n",
-                "\n",
-                "To store all DC3 result, the following comands.\n",
-                "Stored in .npy, one of the best way of storage for list (https://stackoverflow.com/questions/9619199/best-way-to-preserve-numpy-arrays-on-disk)"
+                "## Suffix array of the genome with DC3 algorithm\n",
+                "The following lines of code are used to import the suffix table computed from the DC3 algorithm. Suffix tables are stored in npy files, one of the best way of storage for list <p>\n",
+                "Source: https://stackoverflow.com/questions/9619199/-way-to-preserve-numpy-arrays-on-disk"
             ]
         },
         {
@@ -185,7 +177,8 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "This chunk creates (or imports) the BWT transform of every chromosomes"
+                "## Burrows Wheeler Transform (BWT) of the genome\n",
+                "This chunk creates (or imports) the BWT transform of every chromosomes."
             ]
         },
         {
@@ -232,16 +225,8 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Now we calcule all read"
-            ]
-        },
-        {
-            "attachments": {},
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### *Reads* acquired from a *P.falciparum* genome sequencing \n",
-                "In the same way, *reads* are extracted with *Biopython* and stored in a  python list **reads**. All the *reads* have the same length: 100 pairs of bases"
+                "## Reads importation\n",
+                "*Reads* sequence and identifier are extracted with *Biopython* and stored in a python list **reads**. The sequencing produced 100000 *reads* for each of the 15 chromomoses for a total of 1500000 *reads*. All the *reads* have the same length: 100 pairs of bases. "
             ]
         },
         {
@@ -459,7 +444,7 @@
                 "            read = reads[i][0]\n",
                 "            k_reads = mapping.cut_read_to_kmer(read[i][0],20)\n",
                 "            k_reads_locs = [mapping.string_search(k_read,chromosomes[0]) for k_read in k_reads]\n",
-                "            mapping.link_kmer_fast(k_reads, k_reads_locs)\n",
+                "            mapping.link_kmer(k_reads, k_reads_locs)\n",
                 "            pbar.update(1)\n",
                 "            \n",
                 "import cProfile\n",
@@ -474,7 +459,7 @@
                 "## Mapping algorithm\n",
                 "To find the location(s) of a given read on a genome, we start with the cutting of a read into smaller pieces, called **kmers**.\n",
                 "Then we find all the locations of these kmers and we \"reconstruct\" the read to find it's most precise localisation. <p>\n",
-                "The length of the kmers is set to 25 which seems to be a good trade-off between precision and mapping speed."
+                "The length of the kmers is set to 20 which seems to be a good trade-off between precision and mapping speed (the smaller a kmer is, the better the mapping can be because it is less sensitive to mutations)."
             ]
         },
         {
