(really last one)

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -425,7 +425,7 @@
             "source": [
                 "importlib.reload(mapping)\n",
                 "\n",
-                "with tqdm(total=1500000, desc=\"Reads importation\") as pbar:\n",
+                "with tqdm(total=750000, desc=\"Reads importation\") as pbar:\n",
                 "    for chr_n in range(len(chromosomes)):\n",
                 "        iddsq = 0\n",
                 "        starts_reads = chr_n*100000\n",
@@ -655,7 +655,7 @@
             ],
             "source": [
                 "def complexity_test(): #In a function to use cProfile\n",
-                "    with tqdm(total=1500000, desc=\"Reads importation\") as pbar:\n",
+                "    with tqdm(total=500000, desc=\"Reads importation\") as pbar:\n",
                 "        for chr_n in range(len(chromosomes)):\n",
                 "            iddsq = 0\n",
                 "            starts_reads = chr_n*100000\n",
@@ -675,6 +675,14 @@
                 "                pbar.update(1)\n",
                 "\n",
                 "cProfile.run(\"complexity_test()\")"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "We can see a average of 5842.46 iteration per seconde for the mapping algorithm without error"
             ]
         },
         {
